[package]
name = "int32"
version = "3.0.10"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/node-int32"
homepage = "https://magiclen.org/node-js-int32/"
keywords = ["node.js", "int32", "overflow", "underflow"]
categories = []
description = "Use Rust to compute 32-bit signed integers and wrap around at the boundary."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]
