[package]
name = "int32"
version = "5.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/magiclen/node-int32"
homepage = "https://magiclen.org/node-js-int32/"
keywords = ["nodejs", "int32", "overflow", "underflow"]
categories = []
description = "Use Rust to compute 32-bit signed integers and wrap around at the boundary."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
napi = "2"
napi-derive = "2"

[build-dependencies]
napi-build = "2"